--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="camera">Camera</string>
     <string name="settings">Setting</string>
     <string name="filter">Filter</string>
+    <string name="create_album">Create Album</string>
+    <string name="add_title">Add Title</string>
 </resources>
