add on click item album

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="filter">Filter</string>
     <string name="create_album">Create Album</string>
     <string name="add_title">Add Title</string>
+    <string name="slide_show">Slide Show</string>
+    <string name="add_image">Add Image</string>
 </resources>
