--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,22 @@
     <string name="add_title">Add Title</string>
     <string name="slide_show">Slide Show</string>
     <string name="add_image">Add Image</string>
+    <string name="edit_photo">Edit Image</string>
+    <string name="add_to_favorite">Add Image Favorite</string>
+    <string name="delete">Delete</string>
+
+    <string name="information">Information</string>
+    <string name="addAlbum">Add to album</string>
+    <string name="hide_photo">Hide/show photo</string>
+    <string name="set_wallpaper">Set wallpaper</string>
+    <string name="search_results">Search results</string>
+    <string name="exif_data">Information Image</string>
+    <string name="unknown">Unknown</string>
+    <string name="name">Name</string>
+    <string name="producer">Producer</string>
+    <string name="model">Model</string>
+    <string name="size">Size</string>
+    <string name="author">Author</string>
+
+
 </resources>
