create dialog when long click image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="model">Model</string>
     <string name="size">Size</string>
     <string name="author">Author</string>
+    <string name="location">Location</string>
+    <string name="addprivate">Add To Private</string>
 
 
 
