--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="author">Author</string>
     <string name="location">Location</string>
     <string name="addprivate">Add To Private</string>
+    <string name="remove_album">Remove Album</string>
     <string name="listalbum">List album</string>
     <string name="albumPrivate">Album Private</string>
     <string name="recentlydeleted">Recently deleted</string>
