--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="enter_new_password">Enter new password</string>
     <string name="confirm_new_password">Confirm new password</string>
     <string name="answer_your_question">Answer your question</string>
+    <string name="put_back">Put back</string>
 
 
     <string name="simple">Simple</string>
